--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </ul>
             </nav>
         </div>
-        <p>Casasola Joaquin <date>2024 </date>&copy;</p>
+        <p>Casasola Joaquin <date id="year"></date>&copy;</p>
     </footer>
 </body>
 </html>
