--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="barra">
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="./assets/logo.svg" alt=""></a>
             <nav>
                 <ul class="menu">
                     <li><a href="#">Nosotros</a></li>
@@ -43,7 +43,7 @@
                     <label for="txtmasa">Masa</label>
                 </div>
                 <div class="tipo" id="tipo">
-                    <label for="tipo-planet">Nacionalidad:</label>
+                    <label for="tipo-planet">Tipo:</label>
                     <select name="tipo-planet" id="tipo-planet">
                         <option value="tipo-rocoso">Rocoso</option>
                         <option value="tipo-gaseoso">Gaseoso</option>
